glsl: never enable unsupported extensions (bug 38015)

For some extensions, _mesa_glsl_process_extension() only checked
whether the extension was supported *after* enabling it.  Modified the
logic to always check first, and only enable supported extensions.

Fixes https://bugs.freedesktop.org/show_bug.cgi?id=38015 and piglit
test glsl-link-bug38015.